gio/gsubprocesslauncher.c
@@ -174,7 +174,7 @@ g_subprocess_launcher_finalize (GObject *object)
 static void
 g_subprocess_launcher_init (GSubprocessLauncher  *self)
 {
-  self->envp = g_listenv ();
+  self->envp = g_get_environ ();
 
 #ifdef G_OS_UNIX
   self->stdin_fd = -1;
